--- a/pages/subpages/common/search/components/user-item/index.wxml
+++ b/pages/subpages/common/search/components/user-item/index.wxml
@@ -1,9 +1,9 @@
 <view class="user-item row" bindtap="navToUserCenter">
   <image class="avatar" src="{{ item.avatar }}" lazy-load />
   <view class="user-info">
-    <view class="name">{{ item.nickname }}</view>
+    <view class="name omit single">{{ item.nickname }}</view>
     <view class="user-data">{{item.followedUsersNumber}}关注 · {{item.fansNumber}}粉丝</view>
-    <view class="signature" wx:if="{{item.signature}}">{{ item.signature }}</view>
+    <view class="signature">{{ item.signature || '暂无个性签名' }}</view>
   </view>
   <view 
     class="btn row center {{ !item.isFollow ? 'active' : '' }}"
