--- a/components/hotel-item-strip/index.wxss
+++ b/components/hotel-item-strip/index.wxss
@@ -1,14 +1,22 @@
+.omit {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
+
 .hotel-item {
   display: flex;
   align-items: center;
-  padding: 20rpx 0;
+  padding: 24rpx 0;
   font-size: 0;
   border-bottom: 1px solid #f5f6f8;
 }
 .cover {
   width: 220rpx;
   height: 280rpx;
-  border-radius: 12rpx;
+  border-radius: 24rpx;
 }
 
 .content {
@@ -105,4 +113,7 @@
   color: #999;
   font-size: 20rpx;
   line-height: 1;
+}
+.num {
+  font-weight: bold;
 }
