--- a/pages/subpages/common/search/components/user-item/index.wxss
+++ b/pages/subpages/common/search/components/user-item/index.wxss
@@ -1,13 +1,12 @@
 .user-item {
   margin-bottom: 24rpx;
   padding: 24rpx;
-  line-height: 1;
   background: #fff;
-  border-radius: 20rpx;
+  border-radius: 32rpx;
 }
 .avatar {
-  width: 120rpx;
-  height: 120rpx;
+  width: 108rpx;
+  height: 108rpx;
   border-radius: 50%;
 }
 .user-info {
@@ -17,18 +16,19 @@
 .name {
   color: #000;
   font-size: 30rpx;
+  line-height: 1;
   font-weight: 550;
 }
 .user-data {
-  margin-top: 12rpx;
+  margin-top: 4rpx;
   color: #333;
-  font-size: 18rpx;
+  font-size: 20rpx;
   font-weight: 300;
 }
 .signature {
-  margin-top: 12rpx;
+  margin-top: 8rpx;
   color: #999;
-  font-size: 22rpx;
+  font-size: 20rpx;
   font-weight: 300;
 }
 
@@ -40,8 +40,9 @@
   height: 50rpx;
   color: #333;
   font-size: 24rpx;
+  font-weight: 500;
   background: #eee;
-  border-radius: 8rpx;
+  border-radius: 18rpx;
 }
 .btn.active {
   color: #fff;
