--- a/pages/subpages/common/search/index.wxss
+++ b/pages/subpages/common/search/index.wxss
@@ -132,16 +132,9 @@
 .result-overview-wrap {
   margin-bottom: 32rpx;
 }
-.result-title {
-  margin-bottom: 20rpx;
-  padding: 0 12rpx;
-  color: #333;
-  font-size: 30rpx;
-  font-weight: 550;
-}
 
 .more-btn {
-  color: var(--blue-1);
+  color: #999;
   font-size: 24rpx;
   font-weight: normal;
 }
@@ -151,7 +144,13 @@
 }
 
 .list-wrap {
-  padding: 216rpx 20rpx 20rpx;
+  padding: 224rpx 20rpx 20rpx;
+}
+
+.product-list {
+  padding: 0 24rpx;
+  background: #fff;
+  border-radius: 32rpx;
 }
 
 .loading {
