--- a/components/hotel-item-strip/index.wxml
+++ b/components/hotel-item-strip/index.wxml
@@ -15,7 +15,7 @@
       </view>
     </view>
     <view class="position-wrap">
-      <image class="position-icon" src="./images/position.png" />
+      <image class="position-icon" src="/images/position.png" />
       <view class="position-content">{{item.address}}，距您{{distance}}</view>
     </view>
     <view class="labels">
