--- a/components/restaurant-item-strip/index.wxss
+++ b/components/restaurant-item-strip/index.wxss
@@ -1,6 +1,42 @@
+.row {
+  display: flex;
+  align-items: center;
+}
+.row.center {
+  justify-content: center;
+}
+.row.between {
+  justify-content: space-between;
+}
+.row.around {
+  justify-content: space-around;
+}
+.row.end {
+  justify-content: flex-end;
+}
+.row.baseline {
+  align-items: baseline;
+}
+.row.top {
+  align-items: flex-start;
+}
+.row.bottom {
+  align-items: flex-end;
+}
+
+.omit {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+.omit.single {
+  -webkit-line-clamp: 1;
+}
+
 .restaurant {
   padding: 24rpx 0;
-  background: #fff;
   border-bottom: 1px solid #f5f6f8;
 }
 .main {
@@ -11,7 +47,7 @@
 .cover {
   width: 204rpx;
   height: 204rpx;
-  border-radius: 12rpx;
+  border-radius: 24rpx;
 }
 
 .content {
@@ -149,6 +185,7 @@
 }
 .ticket-content {
   margin-left: 20rpx;
+  flex: 1;
 }
 .ticket-icon {
   width: 32rpx;
@@ -168,6 +205,7 @@
 }
 .ticket-desc {
   margin-left: 10rpx;
+  flex: 1;
   color: #333;
   font-size: 22rpx;
 }
@@ -176,8 +214,9 @@
   padding: 0 6rpx;
   height: 24rpx;
   color: #F66B38;
-  font-size: 20rpx;
+  font-size: 18rpx;
   line-height: 1;
+  white-space: nowrap;
   border-radius: 4rpx;
   background: #f6eeec;
 }
