--- a/components/hotel-item-strip/index.wxml
+++ b/components/hotel-item-strip/index.wxml
@@ -1,4 +1,4 @@
-<view class="hotel-item" bindtap="checkDetail">
+<view class="hotel-item {{showBorder ? 'show-border' : ''}}" bindtap="checkDetail">
   <image class="cover" src="{{ item.cover }}" mode="aspectFill" lazy-load />
   <view class="content">
     <view class="title omit">{{ item.name }}</view>
