--- a/components/restaurant-item-strip/index.wxss
+++ b/components/restaurant-item-strip/index.wxss
@@ -39,6 +39,9 @@
   padding: 24rpx 0;
   border-bottom: 1px solid #f5f6f8;
 }
+.restaurant.show-border {
+  border-bottom: 1px solid #f5f6f8;
+}
 .main {
   display: flex;
   font-size: 0;
