--- a/components/goods-item-strip/index.wxml
+++ b/components/goods-item-strip/index.wxml
@@ -1,4 +1,4 @@
-<view class="goods-item row" bindtap="navToGoodsDetail">
+<view class="goods-item row {{showBorder ? 'show-border' : ''}}" bindtap="navToGoodsDetail">
   <image class="goods-cover" mode="widthFix" src="{{item.cover}}" bindload="onCoverLoaded" lazy-load />
   <view class="goods-content">
     <view class="goods-title omit">
