--- a/components/hotel-item-strip/index.wxss
+++ b/components/hotel-item-strip/index.wxss
@@ -13,6 +13,10 @@
   font-size: 0;
   border-bottom: 1px solid #f5f6f8;
 }
+.hotel-item.show-border {
+  border-bottom: 1px solid #f5f6f8;
+}
+
 .cover {
   width: 220rpx;
   height: 280rpx;
