--- a/components/scenic-item-strip/index.wxss
+++ b/components/scenic-item-strip/index.wxss
@@ -17,6 +17,8 @@
   align-items: center;
   padding: 24rpx 0;
   font-size: 0;
+}
+.scenic.show-border {
   border-bottom: 1px solid #f5f6f8;
 }
 .cover {
@@ -84,6 +86,9 @@
   height: 20rpx;
 }
 .position-content {
+  flex: 1;
+}
+.position-address {
   flex: 1;
 }
 
