--- a/pages/subpages/common/ai-chat/components/comment-list/index.wxss
+++ b/pages/subpages/common/ai-chat/components/comment-list/index.wxss
@@ -20,26 +20,29 @@
 .msg-detail.mine {
   flex-flow: row-reverse;
 }
-.content {
+.content-wrap {
   position: relative;
   padding: 24rpx;
   max-width: 100%;
   color: #262626;
   font-size: 28rpx;
-  line-height: 44rpx;
   background: #fff;
   border-radius: 4rpx 32rpx 32rpx 32rpx;
 }
-.content.opening-remarks {
+.content-wrap.opening-remarks {
   padding: 32rpx;
   background: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(8px);
 }
-.content.mine {
+.content-wrap.mine {
   max-width: 80%;
   color: #fff;
   background: var(--blue-1);
   border-radius: 32rpx 4rpx 32rpx 32rpx;
+}
+
+.content {
+  line-height: 44rpx;
 }
 
 .robot-info-wrap {
@@ -119,4 +122,21 @@
 @keyframes blink {
   0%, 80%, 100% { opacity: 0.3; transform: scale(1); }
   40% { opacity: 1; transform: scale(1.3); }
+}
+
+.recommend-title {
+  margin-top: 24rpx;
+  color: #111;
+  font-size: 28rpx;
+  font-weight: 600;
+}
+.more-btn {
+  padding-top: 24rpx;
+  color: #333;
+  font-size: 24rpx;
+  font-weight: normal;
+}
+.more-icon {
+  width: 18rpx;
+  height: 18rpx;
 }
