--- a/pages/tab-bar-pages/home/components/note-item/index.wxml
+++ b/pages/tab-bar-pages/home/components/note-item/index.wxml
@@ -10,7 +10,7 @@
         <view class="time">{{TIME.timeDiff(item.createdAt)}}</view>
         <view class="address row" wx:if="{{item.address}}">
           <text class="split-spot">·</text>
-          <image class="address-icon" src="/images/media-item/address.png" />
+          <image class="address-icon" src="https://static.tiddler.cn/mp/media_item/address.png" />
           <text class="address-detail omit single">{{item.address}}</text>
         </view>
       </view>
@@ -26,16 +26,16 @@
   
   <view class="btn-wrap">
     <view class="btn-item">
-      <image class="btn-icon" src="/images/media-item/comment.png" />
+      <image class="btn-icon" src="https://static.tiddler.cn/mp/media_item/comment.png" />
       <view class="btn-data">{{NUM.over(item.commentsNumber, 100000)}}</view>
     </view>
     <view class="other-btns">
       <view class="btn-item" style="margin-right: 68rpx;" catchtap="like">
-        <image class="btn-icon" src="/images/media-item/heart{{item.isLike ? '-active' : ''}}.png" />
+        <image class="btn-icon" src="https://static.tiddler.cn/mp/media_item/heart{{item.isLike ? '-active' : ''}}.png" />
         <view class="btn-data">{{NUM.over(item.likeNumber, 100000)}}</view>
       </view>
       <view class="btn-item" catchtap="collect">
-        <image class="btn-icon" src="/images/media-item/collection{{item.isCollected ? '-active' : ''}}.png" />
+        <image class="btn-icon" src="https://static.tiddler.cn/mp/media_item/collection{{item.isCollected ? '-active' : ''}}.png" />
         <view class="btn-data">{{NUM.over(item.collectionTimes, 100000)}}</view>
       </view>
     </view>
