--- a/pages/subpages/common/ai-chat/components/comment-list/index.wxml
+++ b/pages/subpages/common/ai-chat/components/comment-list/index.wxml
@@ -5,7 +5,7 @@
         <view class="content-wrap opening-remarks">
           <view class="robot-info-wrap">
             <view class="robot-info">
-              <view class="robot-name">Hi，我是智能助手小鱼</view>
+              <view class="robot-hello">Hi，我是智能助手小鱼</view>
               <view class="robot-intro">关于千岛湖旅游的相关事宜，都可以找我咨询哦，快来聊聊吧！</view>
             </view>
             <image class="robot-avatar" src="https://static.tiddler.cn/mp/ai/robot.png" />
