--- a/components/back-icon/index.wxml
+++ b/components/back-icon/index.wxml
@@ -1,3 +1,3 @@
 <view class="back-icon" catchtap="navigateBack">
-  <image style="width: 20px; height: 20px;" src="/images/back.png" />
+  <image class="icon {{icon}}" src="/images/{{icon}}.png" />
 </view>
