--- a/components/back-icon/index.wxss
+++ b/components/back-icon/index.wxss
@@ -2,10 +2,19 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-right: 2px;
   width: 32px;
   height: 32px;
   border-radius: 50%;
   border: 0.5px solid #e1e1e1;
   background: rgba(255, 255, 255, 0.6);
+}
+
+.icon.back {
+  margin-right: 2px;
+  width: 20px; 
+  height: 20px;
+}
+.icon.home {
+  width: 18px; 
+  height: 18px;
 }
