--- a/pages/subpages/notice/chat/index.wxss
+++ b/pages/subpages/notice/chat/index.wxss
@@ -1,6 +1,10 @@
 .container {
+  position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
   flex-direction: column;
+  width: 100vw;
   height: 100vh;
   background: #f6f6f6;
 }
