--- a/pages/subpages/mall/hotel/subpages/order-check/index.wxml
+++ b/pages/subpages/mall/hotel/subpages/order-check/index.wxml
@@ -72,9 +72,9 @@
     <view class="rule-title">预订说明</view>
     <view class="rule-content">
       <text>订单需等商家或供应商确认后才生效，订单确认结果以小鱼游短信或邮件通知为准;请在订单生效后再至商家前台办理入住。预订服务由小鱼游平台提供，住宿服务由住宿服务提供者提供。请您在提交订单前仔细阅读</text>
-      <text style="color: #00B2FF">《小鱼游酒店预订条款》</text>
+      <text style="color: #00B2FF" bindtap="checkOrderProtocol">《小鱼游酒店预订条款》</text>
       <text>和</text>
-      <text style="color: #00B2FF">《个人信息授权声明》</text>
+      <text style="color: #00B2FF" bindtap="checkAuthProtocol">《个人信息授权声明》</text>
     </view>
   </view>
 </view>
