--- a/components/back-icon-white/index.wxss
+++ b/components/back-icon-white/index.wxss
@@ -13,12 +13,10 @@
   background: transparent;
 }
 
-.icon.back {
-  margin-right: 2px;
+.icon {
   width: 20px; 
   height: 20px;
 }
-.icon.home {
-  width: 18px; 
-  height: 18px;
+.icon.back {
+  margin-right: 2px;
 }
