--- a/components/back-icon-white/index.wxml
+++ b/components/back-icon-white/index.wxml
@@ -1,3 +1,3 @@
 <view class="back-icon {{noBorder ? 'no-border' : ''}}" catchtap="navigateBack">
-  <image class="icon {{icon}}" src="/images/{{icon}}_white.png" />
+  <image class="icon {{icon}}" src="https://static.tiddler.cn/mp/{{icon}}_white.png" />
 </view>
