--- a/components/back-icon/index.wxml
+++ b/components/back-icon/index.wxml
@@ -1,3 +1,3 @@
 <view class="back-icon" catchtap="navigateBack">
-  <image class="icon {{icon}}" src="/images/{{icon}}.png" />
+  <image class="icon {{icon}}" src="https://static.tiddler.cn/mp/{{icon}}.png" />
 </view>
