--- a/pages/tab-bar-pages/home/index.wxml
+++ b/pages/tab-bar-pages/home/index.wxml
@@ -154,3 +154,5 @@
 </swiper>
 
 <ai-tag scrolling="{{scrolling}}" />
+
+<ad-modal wx:if="{{adModalVisible}}" info="{{adInfo}}" bind:hide="hideAdModal" />
