feat: 图片换线上图片

--- a/pages/subpages/home/trip-type/night-trip/components/video-item/index.wxml
+++ b/pages/subpages/home/trip-type/night-trip/components/video-item/index.wxml
@@ -8,7 +8,7 @@
       mode="aspectFill" 
     />
     <view class="video-symbol">
-      <image class="play-icon" src="/images/play.png" />
+      <image class="play-icon" src="https://static.tiddler.cn/mp/play.png" />
     </view>
   </view>
   <view class="video-title omit single">{{item.title}}</view>
