--- a/components/video-item/index.wxml
+++ b/components/video-item/index.wxml
@@ -28,7 +28,7 @@
       <text>私密</text>
     </view>
     <view class="video-symbol">
-      <image class="play-icon" src="/images/play.png" />
+      <image class="play-icon" src="https://static.tiddler.cn/mp/play.png" />
     </view>
     <view class="address-info" wx:if="{{item.address}}">
       <image class="address-icon" src="/images/address.png" />
