feat: 图片换线上图片

--- a/pages/subpages/mall/scenic/index.wxml
+++ b/pages/subpages/mall/scenic/index.wxml
@@ -2,7 +2,7 @@
   <view class="search-bar-wrap">
     <back-icon />
     <view class="search-bar" bindtap="search">
-      <image class="search-icon" src="/images/search.png" />
+      <image class="search-icon" src="https://static.tiddler.cn/mp/search.png" />
       <text class="placeholder">搜索景点</text>
     </view>
   </view>
