--- a/pages/subpages/mall/catering/index.wxml
+++ b/pages/subpages/mall/catering/index.wxml
@@ -4,7 +4,7 @@
   <view class="search-bar-wrap">
     <back-icon />
     <view class="search-bar" bindtap="search">
-      <image class="search-icon" src="/images/search.png" />
+      <image class="search-icon" src="https://static.tiddler.cn/mp/search.png" />
       <text class="placeholder">搜索餐饮美食</text>
     </view>
   </view>
