--- a/pages/subpages/mall/hotel/index.wxml
+++ b/pages/subpages/mall/hotel/index.wxml
@@ -14,7 +14,7 @@
           <text>{{TIME.transform(checkOutDate, 'MM-DD')}}</text>
         </view>
       </view>
-      <image class="search-icon" src="/images/search.png" />
+      <image class="search-icon" src="https://static.tiddler.cn/mp/search.png" />
       <text class="placeholder">搜索酒店民宿</text>
     </view>
   </view>
